--- a/film.html
+++ b/film.html
@@ -904,16 +904,16 @@ currentSource = "movie";
 // якщо користувач має PRO — показуємо відео
 if (hasPro) {
   document.querySelector(".player-box").innerHTML =
-    <video id="filmPlayer" 
-  controls 
-  playsinline 
-  muted 
-  crossorigin="anonymous" 
-  preload="metadata" 
-  allow="autoplay; picture-in-picture" 
-  controlsList="nodownload"
-  style="border-radius:12px;width:100%;height:auto;display:block;max-width:100vw;"></video>
-
+    `<video id="filmPlayer" 
+      controls 
+      playsinline 
+      muted 
+      crossorigin="anonymous" 
+      preload="metadata" 
+      allow="autoplay; picture-in-picture" 
+      controlsList="nodownload"
+      style="border-radius:12px;width:100%;height:auto;display:block;max-width:100vw;"></video>`;
+  setupPlayer(movieUrl);
 }
 // якщо НЕ має PRO — показуємо банер
 else {
