--- a/film.html
+++ b/film.html
@@ -24,14 +24,6 @@
 
 
   <style>
-    #bigPlayBtn {
-      pointer-events: none;
-    }
-    #bigPlayBtn div {
-      pointer-events: auto;
-    }
-
-    
     /* === 🔹 Блок дій праворуч над плеєром === */
     .film-actions {
       display: flex;
@@ -629,11 +621,6 @@ function getYouTubeId(url) {
     function setupPlayer(url) {
       const player = document.getElementById("filmPlayer");
       destroyHls();                   // вимикаємо попередній інстанс
-      // ✅ Включаємо системну кнопку "картинка в картинці"
-      player.controls = true;
-      player.disablePictureInPicture = false;
-      player.setAttribute("allow", "autoplay; picture-in-picture");
-      player.setAttribute("controlsList", "nodownload"); // залишає PiP і fullscreen
 
       // Обнуляємо src і паузимо
       try { player.pause(); } catch(e) {}
@@ -904,15 +891,7 @@ currentSource = "movie";
 // якщо користувач має PRO — показуємо відео
 if (hasPro) {
   document.querySelector(".player-box").innerHTML =
-    `<video id="filmPlayer" 
-      controls 
-      playsinline 
-      muted 
-      crossorigin="anonymous" 
-      preload="metadata" 
-      allow="autoplay; picture-in-picture" 
-      controlsList="nodownload"
-      style="border-radius:12px;width:100%;height:auto;display:block;max-width:100vw;"></video>`;
+    `<video id="filmPlayer" controls playsinline muted crossorigin="anonymous" preload="metadata"></video>`;
   setupPlayer(movieUrl);
 }
 // якщо НЕ має PRO — показуємо банер
