--- a/film.html
+++ b/film.html
@@ -893,7 +893,68 @@ if (hasPro) {
   document.querySelector(".player-box").innerHTML =
     `<video id="filmPlayer" controls playsinline allow="autoplay; picture-in-picture" allowfullscreen muted crossorigin="anonymous" preload="metadata"></video>`;
   setupPlayer(movieUrl);
+
+  // 🔹 Кнопка "Картинка в картинці"
+  const pipBtn = document.createElement("button");
+  pipBtn.textContent = "📺 Картинка в картинці";
+  pipBtn.style.cssText = `
+    margin-top: 10px;
+    background: #00fff2;
+    color: #000;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: 600;
+    display: block;
+    width: fit-content;
+    transition: 0.2s;
+  `;
+  pipBtn.onmouseenter = () => pipBtn.style.boxShadow = "0 0 10px #00fff2";
+  pipBtn.onmouseleave = () => pipBtn.style.boxShadow = "none";
+
+  const playerBox = document.querySelector(".player-box");
+  playerBox.appendChild(pipBtn);
+
+  // 🎬 Запуск Picture-in-Picture
+  pipBtn.addEventListener("click", async () => {
+    const video = document.getElementById("filmPlayer");
+    try {
+      if (document.pictureInPictureElement) {
+        await document.exitPictureInPicture();
+      } else if (video.requestPictureInPicture) {
+        await video.requestPictureInPicture();
+      } else {
+        alert("Ваш браузер не підтримує режим 'Картинка в картинці'");
+      }
+    } catch (err) {
+      console.error("❌ Помилка PiP:", err);
+    }
+  });
 }
+// якщо НЕ має PRO — показуємо банер
+else {
+  document.querySelector(".player-box").innerHTML = `
+    <div style="
+      background:#000;
+      color:#00fff2;
+      text-align:center;
+      padding:45px 20px;
+      border-radius:12px;
+      border:1px solid rgba(0,255,255,0.3);
+      box-shadow:0 0 30px rgba(0,255,255,0.15);
+      font-size:18px;
+      line-height:1.6;
+    ">
+      💎 Цей фільм доступний лише для <b>PRO користувачів</b>.<br><br>
+      <a href="profile.html" 
+         style="color:#fff;text-decoration:underline;font-weight:600;">
+         Отримати PRO доступ
+      </a>
+    </div>
+  `;
+}
+
 // якщо НЕ має PRO — показуємо банер
 else {
   document.querySelector(".player-box").innerHTML = `
@@ -931,27 +992,7 @@ btnMovie.addEventListener("click", () => {
   if (hasPro) {
     setupPlayer(movieUrl);
   }
-  // 🔹 Кнопка "Картинка в картинці"
-const pipBtn = document.createElement("button");
-pipBtn.textContent = "📺 Картинка в картинці";
-pipBtn.style.cssText = `
-  margin-top: 10px;
-  background: #00fff2;
-  color: #000;
-  border: none;
-  padding: 8px 12px;
-  border-radius: 8px;
-  cursor: pointer;
-  font-weight: 600;
-  display: block;
-  width: fit-content;
-  transition: 0.2s;
-`;
-pipBtn.onmouseenter = () => pipBtn.style.boxShadow = "0 0 10px #00fff2";
-pipBtn.onmouseleave = () => pipBtn.style.boxShadow = "none";
 
-const playerBox = document.querySelector(".player-box");
-playerBox.appendChild(pipBtn);
 
 // 🎬 Запуск Picture-in-Picture
 pipBtn.addEventListener("click", async () => {
