--- a/film.html
+++ b/film.html
@@ -655,19 +655,32 @@ function bindPlayerUX(player) {
     btn.className = "pip-btn";
     btn.textContent = "PiP";
     Object.assign(btn.style, {
-      position: "absolute",
-      right: "12px",
-      top: "12px",
-      zIndex: "5",
-      border: "1px solid rgba(0,255,255,0.4)",
-      background: "rgba(0,0,0,0.5)",
-      color: "#00fff2",
-      padding: "6px 10px",
-      borderRadius: "8px",
-      cursor: "pointer",
-      fontWeight: "700",
-      backdropFilter: "blur(4px)"
-    });
+  position: "absolute",
+  right: "14px",
+  top: "-42px", // 🔺 підняли вище панелі керування
+  zIndex: "5",
+  border: "1px solid rgba(0,255,255,0.4)",
+  background: "rgba(0,0,0,0.45)",
+  color: "#00fff2",
+  padding: "6px 12px",
+  borderRadius: "10px",
+  cursor: "pointer",
+  fontWeight: "700",
+  backdropFilter: "blur(4px)",
+  opacity: "0.6",                 // 🔹 трохи прозора
+  transition: "opacity .2s ease, transform .2s ease"
+});
+
+// 💡 Додай реакцію на наведення
+btn.addEventListener("mouseenter", () => {
+  btn.style.opacity = "1";
+  btn.style.transform = "scale(1.08)";
+});
+btn.addEventListener("mouseleave", () => {
+  btn.style.opacity = "0.6";
+  btn.style.transform = "scale(1)";
+});
+
     wrapper.style.position = "relative";
     wrapper.appendChild(btn);
 
@@ -1059,10 +1072,11 @@ btnMovie.addEventListener("click", () => {
           width="100%" height="480"
           src="${src}"
           frameborder="0"
-          allow="autoplay; encrypted-media"
+          allow="autoplay; encrypted-media; picture-in-picture"
           allowfullscreen
           style="border-radius:12px;width:100%;aspect-ratio:16/9;">
         </iframe>`;
+
     } else {
       // Інакше — звичайний відео-плеєр
       box.innerHTML = buildVideoTag();
