--- a/film.html
+++ b/film.html
@@ -1327,10 +1327,21 @@ function enableMiniPiP() {
     player.style.transition = "none";
   });
   document.addEventListener("mousemove", (e) => {
-    if (!isDragging) return;
-    e.preventDefault();
-    player.style.left = e.clientX - offsetX + "px";
-    play
+  if (!isDragging) return;
+  e.preventDefault();
+  player.style.left = e.clientX - offsetX + "px";
+  player.style.top  = e.clientY - offsetY + "px";
+});
+document.addEventListener("mouseup", () => {
+  if (isDragging) {
+    isDragging = false;
+    player.style.transition = "all .3s ease";
+  }
+});
+}
+
+window.addEventListener("DOMContentLoaded", enableMiniPiP);
+
 
   </script>
 <!-- 🧾 Модальне вікно -->
@@ -1462,7 +1473,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
 <script src="seo.js"></script>
-</body>
+
 
 </body>
 </html>
