--- a/profile.html
+++ b/profile.html
@@ -356,87 +356,50 @@ footer {
 </div>
 <!-- ▶️ Продовжити перегляд -->
 <div class="card" id="continue-watch-card" style="position:relative;">
-  <h3 style="margin:0 0 10px; color:#00fff2; display:flex; align-items:center; gap:8px;">
-    <span style="font-size:20px;">▶️</span> Продовжити перегляд
-    <button id="clearLastWatch" 
-      style="margin-left:auto; background:transparent; border:none; color:#888; 
-             font-size:13px; cursor:pointer; transition:color .2s;">
+  <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;">
+    <h3 style="margin:0;color:#00fff2;display:flex;align-items:center;gap:8px;">
+      <span style="font-size:20px;">▶️</span> Продовжити перегляд
+    </h3>
+    <button id="clearLastWatch"
+      style="background:transparent;border:none;color:#888;font-size:13px;
+             cursor:pointer;transition:color .2s;">
       🗑 Очистити
     </button>
-  </h3>
-  <div id="continue-watch-box"></div>
+  </div>
+  <div id="continue-watch-grid" class="bookmark-grid"></div>
 </div>
-
-<style>
-#continue-watch-box {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 10px;
-}
-.continue-card {
-  background: #0d0f14;
-  border: 1px solid rgba(0,255,255,0.15);
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 0 10px rgba(0,255,255,0.08);
-  cursor: pointer;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-  width: 100%;
-  max-width: 400px;
-}
-.continue-card:hover {
-  transform: scale(1.02);
-  box-shadow: 0 0 20px rgba(0,255,255,0.3);
-}
-.continue-card img {
-  width: 100%;
-  height: 220px;
-  object-fit: cover;
-  border-bottom: 1px solid rgba(0,255,255,0.1);
-}
-.continue-info {
-  padding: 10px 12px;
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-}
-.continue-info p {
-  margin: 0;
-  font-weight: 600;
-  color: #eaeaea;
-}
-.continue-info small {
-  color: #9aa0a6;
-  font-size: 13px;
-}
-</style>
 
 <script>
 function renderContinueWatchingInProfile() {
-  const box = document.getElementById("continue-watch-box");
+  const grid = document.getElementById("continue-watch-grid");
   const data = JSON.parse(localStorage.getItem("lastWatched") || "null");
 
-  if (!box) return;
+  if (!grid) return;
 
   if (!data) {
-    box.innerHTML = "<p style='color:#9aa0a6;'>Поки що немає переглянутих фільмів 🎞️</p>";
+    grid.innerHTML = "<p style='color:#9aa0a6;text-align:center;width:100%;margin:6px 0 2px;'>Поки що немає переглянутих 🎞️</p>";
     return;
   }
 
   const time = Math.floor(data.time / 60);
-  box.innerHTML = `
-    <div class="continue-card" onclick="window.location.href='film.html?id=${data.id}'">
+  const typeIcon =
+    data.type === "Серіал" ? "📺" :
+    data.type === "Мультсеріал" ? "🧸" :
+    "🎬";
+
+  // використовуємо однаковий стиль картки з закладок
+  grid.innerHTML = `
+    <div class="bookmark-card" onclick="window.location.href='${data.url || `film.html?id=${data.id}`}'">
       <img src="${data.poster}" alt="${data.title}">
-      <div class="continue-info">
-        <p>${data.title}</p>
-        <small>Продовжити з ${time} хв</small>
-      </div>
+      <p>${typeIcon} ${data.title}</p>
+      <small style="color:#9aa0a6;display:block;text-align:center;margin-bottom:6px;">
+        Продовжити з ${time} хв
+      </small>
     </div>
   `;
 }
 
-// 🗑 Кнопка очищення
+// 🗑 Кнопка очищення історії
 document.getElementById("clearLastWatch")?.addEventListener("click", () => {
   if (!confirm("Очистити історію перегляду?")) return;
   localStorage.removeItem("lastWatched");
