--- a/collections.html
+++ b/collections.html
@@ -72,7 +72,7 @@
 
   // === Збірки з картинками ===
 const collections = [
-  { name: "Фантастика, що вражає уяву", image: "https://i.postimg.cc/MGTzXw4w/scifi15.webp" },
+  { name: "Фантастика, що вражає уяву", image: "https://i.ibb.co/VWY8nn61/scifi15.webp" },
   { name: "Найстрашніші фільми жахів", image: "https://i.ibb.co/pv6wccjj/scifi15.webp" },
   { name: "Обов’язкові до перегляду фільми", image: "https://i.postimg.cc/GpZKQ4zH/mustsee.jpg" },
   { name: "Комедії, що піднімуть настрій", image: "https://i.postimg.cc/wT0hQ7C7/comedy.jpg" },
