--- a/collections.html
+++ b/collections.html
@@ -74,7 +74,7 @@
 const collections = [
   { name: "Фантастика, що вражає уяву", image: "https://i.ibb.co/VWY8nn61/scifi15.webp" },
   { name: "Найстрашніші фільми жахів", image: "https://i.ibb.co/pv6wccjj/scifi15.webp" },
-  { name: "Обов’язкові до перегляду фільми", image: "https://i.postimg.cc/GpZKQ4zH/mustsee.jpg" },
+  { name: "Обов’язкові до перегляду фільми", image: "https://i.ibb.co/PvCGhKjL/1713462630-fb1.jpg" },
   { name: "Комедії, що піднімуть настрій", image: "https://i.postimg.cc/wT0hQ7C7/comedy.jpg" },
   { name: "Адреналін і швидкість — про гонки", image: "https://i.postimg.cc/GmHb7YvS/racing.jpg" },
   { name: "Фільми про танці та музику", image: "https://i.postimg.cc/PqMnpWbF/dance.jpg" },
