--- a/index.html
+++ b/index.html
@@ -581,9 +581,77 @@ document.addEventListener("DOMContentLoaded", async () => {
  <!-- ✅ Service Worker -->
 <script src="seo.js"></script>
 
+
+<script>
+// === PULL TO REFRESH ===
+let startY = 0;
+let isPulling = false;
+let threshold = 60; // відстань у px
+
+// показуємо користувачу "тягни..."
+const refresher = document.createElement("div");
+refresher.id = "pullRefresher";
+refresher.style.cssText = `
+  position: fixed;
+  top: -50px;
+  left: 0;
+  right: 0;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #00fff2;
+  color: black;
+  font-weight: bold;
+  font-size: 16px;
+  transition: 0.3s;
+  z-index: 99999;
+`;
+refresher.textContent = "⬇️ Потягни, щоб оновити...";
+document.body.appendChild(refresher);
+
+// початок свайпу
+document.addEventListener("touchstart", (e) => {
+  if (window.scrollY === 0) {
+    startY = e.touches[0].clientY;
+    isPulling = true;
+  }
+});
+
+// рух свайпу
+document.addEventListener("touchmove", (e) => {
+  if (!isPulling) return;
+
+  let currentY = e.touches[0].clientY;
+  let diff = currentY - startY;
+
+  if (diff > 0) {
+    refresher.style.top = Math.min(diff - 50, 10) + "px";
+  }
+});
+
+// відпустили — перевіряємо
+document.addEventListener("touchend", () => {
+  if (!isPulling) return;
+  isPulling = false;
+
+  if (parseInt(refresher.style.top) > threshold - 50) {
+    refresher.textContent = "🔄 Оновлюємо...";
+    refresher.style.top = "0px";
+
+    setTimeout(() => {
+      location.reload();
+    }, 300);
+  } else {
+    refresher.style.top = "-50px";
+  }
+});
+</script>
+
 </body>
 </body>
 </html>
+
 
 
 
