--- a/index.html
+++ b/index.html
@@ -583,74 +583,81 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 
 <script>
-// === PULL TO REFRESH ===
-let startY = 0;
-let isPulling = false;
-let threshold = 60; // відстань у px
+// === PULL TO REFRESH (повністю робочий) ===
 
-// показуємо користувачу "тягни..."
+let startY = 0;
+let pulling = false;
+let threshold = 70;
+
 const refresher = document.createElement("div");
-refresher.id = "pullRefresher";
 refresher.style.cssText = `
   position: fixed;
-  top: -50px;
+  top: -60px;
   left: 0;
   right: 0;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: 60px;
   background: #00fff2;
-  color: black;
+  color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-weight: bold;
   font-size: 16px;
-  transition: 0.3s;
+  transition: top 0.25s ease;
   z-index: 99999;
 `;
 refresher.textContent = "⬇️ Потягни, щоб оновити...";
 document.body.appendChild(refresher);
 
-// початок свайпу
+// Початок свайпу
 document.addEventListener("touchstart", (e) => {
   if (window.scrollY === 0) {
     startY = e.touches[0].clientY;
-    isPulling = true;
+    pulling = true;
   }
 });
 
-// рух свайпу
+// Рух пальця
 document.addEventListener("touchmove", (e) => {
-  if (!isPulling) return;
-
-  let currentY = e.touches[0].clientY;
-  let diff = currentY - startY;
+  if (!pulling) return;
+  let diff = e.touches[0].clientY - startY;
 
   if (diff > 0) {
-    refresher.style.top = Math.min(diff - 50, 10) + "px";
+    refresher.style.top = Math.min(diff - 60, 15) + "px";
   }
 });
 
-// відпустили — перевіряємо
+// Відпускання
 document.addEventListener("touchend", () => {
-  if (!isPulling) return;
-  isPulling = false;
+  if (!pulling) return;
+  pulling = false;
 
-  if (parseInt(refresher.style.top) > threshold - 50) {
+  let pos = parseInt(refresher.style.top);
+
+  if (pos > threshold * -1) {
     refresher.textContent = "🔄 Оновлюємо...";
     refresher.style.top = "0px";
 
+    // ⬅️ ГОЛОВНИЙ ТРИК: дати жесту завершитись
     setTimeout(() => {
-      location.reload();
-    }, 300);
+      window.scrollTo(0, 0);
+
+      setTimeout(() => {
+        location.reload(true);
+      }, 150);
+
+    }, 150);
   } else {
-    refresher.style.top = "-50px";
+    refresher.style.top = "-60px";
   }
 });
 </script>
 
+
 </body>
 </body>
 </html>
+
 
 
 
