--- a/bookmarks.html
+++ b/bookmarks.html
@@ -90,7 +90,7 @@
   <!-- ✅ Service Worker реєстрація — ставимо ПІСЛЯ усіх скриптів -->
   <script src="/sw-register.js"></script>
   <script src="seo.js"></script>
-
+<script src="/pull-refresh.js"></script>
 </body>
 
 </html>
