--- a/category.html
+++ b/category.html
@@ -464,7 +464,7 @@ initCategoryPage();
 
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
 <script src="seo.js"></script>
-
+<script src="/pull-refresh.js"></script>
 </body>
 
 </body>
