--- a/collection.html
+++ b/collection.html
@@ -204,7 +204,7 @@ body {
 
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
 <script src="seo.js"></script>
-
+<script src="/pull-refresh.js"></script>
 </body>
 
 </body>
