--- a/collections.html
+++ b/collections.html
@@ -223,7 +223,7 @@ const collections = [
 
 <script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
 <script src="seo.js"></script>
-
+<script src="/pull-refresh.js"></script>
 </body>
 
 </body>
