--- a/film.html
+++ b/film.html
@@ -1397,6 +1397,6 @@ window.addEventListener("pageshow", (e) => {
   }
 });
 </script>
-
+<script src="/pull-refresh.js"></script>
 </body>
 </html>
